fix(layout): change layout z-index to be able to click on link

--- a/src/styles/content.scss
+++ b/src/styles/content.scss
@@ -6,6 +6,8 @@
   display: flex;
   justify-content: space-between;
   height: 100%;
+  position: relative;
+  z-index: 10;
 
   @include mobile {
     flex-direction: column;
